# amagawa

./: CMakeLists.txt  README.md
amagawa/: CMakeLists.txt  client.cc  dispatcher.cc  dispatcher.h  fwd.h  message.h  pack_util.h  server.cc  server.h  session.cc  session.h
cmake/: FindMsgPack.cmake
test/: CMakeLists.txt  dispatcher.cc  main.cc  server.cc
